--- a/env.example
+++ b/env.example
@@ -1,15 +1,17 @@
 # Environment variables for Superhero Wheel
 
-# Base URL for the application (used for generating public URLs)
-# In development, this is typically http://localhost:3000
-# In production, set this to your deployed domain
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+# ============================================================================
+# VERCEL BLOB STORAGE (REQUIRED for production)
+# ============================================================================
+# This token is automatically created when you connect Vercel Blob to your project.
+# Go to Vercel Dashboard > Your Project > Storage > Connect Store > Blob
+# The token will be auto-added to your environment variables.
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_xxxxx
 
-# Pollinations API Key (REQUIRED)
-# Get your key from: https://pollinations.ai
-# Set this in Antigravity Secrets/Env UI for production
-POLLINATIONS_API_KEY=your_api_key_here
+# ============================================================================
+# OPTIONAL CONFIGURATION
+# ============================================================================
 
-# Optional: Rate limiting configuration
+# Rate limiting configuration
 # RATE_LIMIT_WINDOW_MS=60000
 # RATE_LIMIT_MAX_REQUESTS=20
