--- a/env.example
+++ b/env.example
@@ -1,12 +1,10 @@
 # Environment variables for Superhero Wheel
 
 # ============================================================================
-# VERCEL BLOB STORAGE (REQUIRED for production)
+# NO STORAGE REQUIRED
 # ============================================================================
-# This token is automatically created when you connect Vercel Blob to your project.
-# Go to Vercel Dashboard > Your Project > Storage > Connect Store > Blob
-# The token will be auto-added to your environment variables.
-BLOB_READ_WRITE_TOKEN=vercel_blob_rw_xxxxx
+# This app does not require any cloud storage (Vercel Blob, S3, etc.)
+# Images are streamed directly from Pollinations API.
 
 # ============================================================================
 # OPTIONAL CONFIGURATION
